# Backend/Progress.Domain/Model/Product.cs
@@ -6,6 +6,7 @@ public class Product
   public string Code { get; set; } = string.Empty;
   public string Name { get; set; } = string.Empty;
   public string Description { get; set; } = string.Empty;
+  public string FullDescription { get; set; } = string.Empty;
   public decimal Stock { get; set; }
   public Price Price { get; set; } = new();
   public Dictionary<int, Price> Prices { get; set; } = new Dictionary<int, Price>();
